include/codata_constants_2022.h

ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ACTION;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_CHARGE;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_CHARGE_DENSITY;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_CURRENT;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_FIELD;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY;