src/codata_constants_2022_capi.f90


type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP") ::&
capi_15 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "h", "e", "r", &
"t", "z", " ", "r", "e", "l", "a", "t", "i", "o", &
"n", "s", "h", "i", "p", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP%value, &
ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP%uncertainty, &
[ &
"H", "z", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP") ::&
capi_16 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "i", "n", "v", &
"e", "r", "s", "e", " ", "m", "e", "t", "e", "r", &
" ", "r", "e", "l", "a", "t", "i", "o", "n", "s", &
"h", "i", "p", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP%value, &
ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP%uncertainty, &
[ &
"m", "^", "-", "1", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP") ::&
capi_17 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "j", "o", "u", &
"l", "e", " ", "r", "e", "l", "a", "t", "i", "o", &
"n", "s", "h", "i", "p", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP%value, &
ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP") ::&
capi_18 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "k", "e", "l", &
"v", "i", "n", " ", "r", "e", "l", "a", "t", "i", &
"o", "n", "s", "h", "i", "p", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP%value, &
ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP%uncertainty, &
[ &
"K", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP") ::&
capi_19 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "k", "i", "l", &
"o", "g", "r", "a", "m", " ", "r", "e", "l", "a", &
"t", "i", "o", "n", "s", "h", "i", "p", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP%value, &
ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY") ::&
capi_20 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "1", "s", "t", " ", "h", &
"y", "p", "e", "r", "p", "o", "l", "a", "r", "i", &
"z", "a", "b", "i", "l", "i", "t", "y", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY%value, &
ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY%uncertainty, &
[ &
"C", "^", "3", " ", "m", "^", "3", " ", "J", "^", &
"-", "2", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY") ::&
capi_21 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "2", "n", "d", " ", "h", &
"y", "p", "e", "r", "p", "o", "l", "a", "r", "i", &
"z", "a", "b", "i", "l", "i", "t", "y", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY%value, &
ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY%uncertainty, &
[ &
"C", "^", "4", " ", "m", "^", "4", " ", "J", "^", &
"-", "3", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ACTION") ::&
capi_22 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "a", "c", "t", "i", "o", &
"n", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ACTION%value, &
ATOMIC_UNIT_OF_ACTION%uncertainty, &
[ &
"J", " ", "s", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_CHARGE") ::&
capi_23 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "c", "h", "a", "r", "g", &
"e", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_CHARGE%value, &
ATOMIC_UNIT_OF_CHARGE%uncertainty, &
[ &
"C", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_CHARGE_DENSITY") ::&
capi_24 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "c", "h", "a", "r", "g", &
"e", " ", "d", "e", "n", "s", "i", "t", "y", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_CHARGE_DENSITY%value, &
ATOMIC_UNIT_OF_CHARGE_DENSITY%uncertainty, &
[ &
"C", " ", "m", "^", "-", "3", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_CURRENT") ::&
capi_25 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "c", "u", "r", "r", "e", &
"n", "t", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_CURRENT%value, &
ATOMIC_UNIT_OF_CURRENT%uncertainty, &
[ &
"A", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM") ::&
capi_26 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "d", "i", "p", "o", "l", "e", &
" ", "m", "o", "m", ".", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM%value, &
ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM%uncertainty, &
[ &
"C", " ", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_FIELD") ::&
capi_27 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "f", "i", "e", "l", "d", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_FIELD%value, &
ATOMIC_UNIT_OF_ELECTRIC_FIELD%uncertainty, &
[ &
"V", " ", "m", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT") ::&
capi_28 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "f", "i", "e", "l", "d", " ", &
"g", "r", "a", "d", "i", "e", "n", "t", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT%value, &
ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT%uncertainty, &
[ &
"V", " ", "m", "^", "-", "2", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY") ::&
capi_29 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "p", "o", "l", "a", "r", "i", &
"z", "a", "b", "i", "l", "i", "t", "y", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY%value, &
ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY%uncertainty, &
[ &
"C", "^", "2", " ", "m", "^", "2", " ", "J", "^", &
"-", "1", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
